# P-Reasoner

./: .gitignore  LICENSE  README.md  pyproject.toml
env/: .env
src/: app.py
src/backend/: chatbot.py
src/frontend/static/css/: animations.css  style.css
src/frontend/static/js/: main.js
src/frontend/templates/: index.html
tests/: configure_openai.py  convo_class.py  multi_agent.py  reason_advanced.py  reason_advanced2.py  reasoning_advanced3.py
