[tool.poetry]
name = "p-reasoner"
version = "0.1.0"
description = "Reasoning on demand with lower cost"
authors = ["Ash Afshar <arsha03@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
